# chorale

./: .gitignore  Cargo.toml  README.md  othersrc.json  output.html  package-lock.json  package.json  postcss.config.js  prismic-configuration.ts  prismic-reactjs.d.ts  src.json  tailwind.config.js  tsconfig.json
api/: Cargo.toml
api/src/: lib.rs  load_page_chunks.rs
base/: Cargo.toml
base/src/: lib.rs  parser.rs  renderer.rs
components/: notion.tsx
layout/: main.tsx
pages/: [url].tsx  _app.tsx  index.tsx
src/: main.rs  parser.rs  renderer.rs
src/renderer/: blocks.rs
templating/: Cargo.toml
templating/src/: attributes.rs  lib.rs  tags.rs
testing/: .gitignore  Cargo.toml  output.html  src.json
testing/benches/: benchmark.rs
testing/src/: main.rs
types/: notion.ts
ui/: Cargo.toml
ui/src/: blocks.rs  inline.rs  lib.rs  utils.rs  wrapper.rs
