[package]
name = "chorale"
version = "0.1.0"
authors = ["Sam Wight <samuelwight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
anyhow = "1.0.31"
horrorshow = "0.8.3"
