[package]
name = "testing"
version = "0.1.0"
authors = ["Sam Wight <samuelwight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
ui = { path = "../ui" }
anyhow = "1.0.31"
maud = "0.21.0"
criterion = "0.3.2"

[[bench]]
name = "benchmark"
harness = false