[package]
name = "testing"
version = "0.1.0"
authors = ["Sam Wight <samuelwight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
base = { path = "../base" }
ui = { path = "../ui" }
anyhow = "1.0.31"
criterion = "0.3.2"
tokio = { version = "1.13.1", features = ["full"] }

[[bench]]
name = "benchmark"
harness = false
